@@ -92,17 +92,15 @@ Vehicle* _vehicleFrontVehicle;
 CoordsXYZ _vehicleCurPosition;
 
 static constexpr OpenRCT2::Audio::SoundId _screamSet0[] = {
-    OpenRCT2::Audio::SoundId::Scream8,
+    OpenRCT2::Audio::SoundId::Scream4,
     OpenRCT2::Audio::SoundId::Scream1,
+    OpenRCT2::Audio::SoundId::Scream2,
+    OpenRCT2::Audio::SoundId::Scream6,
 };
 static constexpr OpenRCT2::Audio::SoundId _screamSet1Wooden[] = {
     OpenRCT2::Audio::SoundId::Scream3, OpenRCT2::Audio::SoundId::Scream1, OpenRCT2::Audio::SoundId::Scream5,
     OpenRCT2::Audio::SoundId::Scream6, OpenRCT2::Audio::SoundId::Scream7, OpenRCT2::Audio::SoundId::Scream2,
     OpenRCT2::Audio::SoundId::Scream4,
-};
-static constexpr OpenRCT2::Audio::SoundId _screamSet2[] = {
-    OpenRCT2::Audio::SoundId::Scream1,
-    OpenRCT2::Audio::SoundId::Scream6,
 };
 
 // clang-format off
@@ -5010,13 +5008,11 @@ OpenRCT2::Audio::SoundId Vehicle::ProduceScreamSound(const int32_t totalNumPeeps
             switch (carEntry.sound_range)
             {
                 case SOUND_RANGE_SCREAMS_0:
+                case SOUND_RANGE_SCREAMS_2:
                     scream_sound_id = _screamSet0[r % std::size(_screamSet0)];
                     break;
                 case SOUND_RANGE_SCREAMS_1_WOODEN_COASTERS:
                     scream_sound_id = _screamSet1Wooden[r % std::size(_screamSet1Wooden)];
-                    break;
-                case SOUND_RANGE_SCREAMS_2:
-                    scream_sound_id = _screamSet2[r % std::size(_screamSet2)];
                     break;
                 default:
                     scream_sound_id = OpenRCT2::Audio::SoundId::NoScream;
